# spotify-commits

./: .cache  MANIFEST.in  README.md  org  pyproject.toml  requirements.txt  setup.py  spotify-commit.code-workspace
spotify_commits.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/git-hooks/: prepare-commit-msg
src/spotify_commits/: install_git_hook.py  setup_env.py  spotify_bot.py
