[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name="spotify-commits"
version="1.0.0"
authors = [
  { name="Richelle Shim", email="richelleshim@gmail.com" },
]
description="A Git hook to append the current Spotify song to commit messages."
requires-python = ">=3.8"
readme = "README.md"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [spotipy, python-dotenv]

[project.entry-points.console_scripts]
spotify-git-bot = "spotify_commits.spotify_bot:main"
setup-spotify-env = "spotify_commits.setup_env:setup_env"
install-git-hook = "spotify_commits.install_git_hook:install_git_hook"


[project.urls]
Homepage = "https://github.com/richelleshim/spotify-commits"
Issues = "https://github.com/richelleshim/spotify-commits/issues"
